Apply OpenRewrite fixes